# financial-inteligence-agent

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: unit-tests.yml
data/: .gitkeep  brou_caja_ahorros_enero_2026.xlsx  itau_cuenta_corriente_enero_2026.xlsx
scripts/: generate_samples.py
src/agent/: configuration.py  db.py  graph.py  nodes.py  state.py
src/agent/services/: exchange_service.py
src/agent/utils/: parsers.py
src/ui/: app.py
tests/: conftest.py
tests/unit_tests/: test_categorize.py  test_duplicate.py  test_ingest.py  test_normalize.py
